# pob-post-install

./: .gitignore  Makefile  post-install.sh  pyproject.toml  run_pob_post_install.py
docs/: implementation_plan.md
src/pob_post_install/: diff.py  editor.py  health.py  history_discovery.py  hooks.py  inventory.py  main.py  plugins.py  receipts.py  recipes.py  registry.py  remote.py  rollback.py  themes.py  timetravel.py  updates.py
src/pob_post_install/models/: package.py  recipe.py
src/pob_post_install/providers/: base.py
src/pob_post_install/ui/: __init__.py
