[project]
name = "pob-post-install"
version = "0.1.0"
description = "Reusable Ubuntu 24.04 LTS post-install TUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.63.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "pydantic>=2.0.0",
]

[project.scripts]
pob-post-install = "pob_post_install.main:main"

[tool.uv]
dev-dependencies = [
    "textual[dev]>=0.63.0",
]
